--- a/azure-loganalytics-functionapp/AzureLogAnalyticsFunctionApp.csproj
+++ b/azure-loganalytics-functionapp/AzureLogAnalyticsFunctionApp.csproj
@@ -2,7 +2,8 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <AzureFunctionsVersion>v3</AzureFunctionsVersion>
-    <RootNamespace>azure_loganalytics_functionapp</RootNamespace>
+    <RootNamespace>Azure.LogAnalytics</RootNamespace>
+    <AssemblyName>AzureLogAnalyticsFunctionApp</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.3" />
